# MY-DUKA-SYSTEM

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  file.txt
backend/: .gitignore  README.md  SETUP_GUIDE.md  SUMMARY.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260202_01_initial_schema.py  20260203_01_add_refresh_tokens.py  20260204_01_add_inventory_events_notifications_thresholds.py
backend/app/: __init__.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: inventory.py  inventory_event.py  notification.py  product.py  refresh_token.py  stock_threshold.py  store.py  supply_request.py  user.py
backend/app/routes/: analytics.py  auth.py  dashboard.py  expenses.py  inventory.py  messages.py  notifications.py  products.py  purchase_orders.py  reports.py  returns.py  sales.py  stock_transfers.py  suppliers.py  supply_requests.py  users.py
backend/app/schemas/: inventory.py  messages.py  notifications.py  product.py  reports.py  user.py
backend/app/services/: email_service.py  notification_service.py  seed_service.py
backend/app/tests/: conftest.py  test_auth.py  test_core_ops.py  test_financials.py  test_inventory.py  test_notifications.py  test_reports.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/app/: store.js
frontend/src/components/: PageShell.jsx
frontend/src/pages/: AdminPanel.jsx  AdminReports.jsx  Dashboard.jsx  ForgotPassword.jsx  Login.jsx  (+7 more)
(+9 files in other folders)
