[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.33.0",
]
